--- a/prof/src/main/resources/application.properties
+++ b/prof/src/main/resources/application.properties
@@ -2,7 +2,8 @@ quarkus.http.cors=true
 
 #??? ???? ??????
 quarkus.datasource.db-kind = postgresql
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/edu-from-to
+#quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/edu-from-to
+quarkus.datasource.jdbc.url=jdbc:postgresql://192.168.0.108:5432/prof
 quarkus.datasource.username=postgres
 quarkus.datasource.password=0a2161bdfe690b902303e1ab4730fe28
 quarkus.hibernate-orm.database.generation=update
@@ -11,6 +12,6 @@ quarkus.hibernate-orm.log.sql=true
 
 quarkus.log.file.enable=true
 #todo ???????? ???? ??????????!!!!!
-quarkus.log.file.path=/home/sseryakova/work/edu_from_to2/edu_from_to/quarkus.log
-quarkus.log.console.enable=true
-quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+#quarkus.log.file.path=/home/sseryakova/work/edu_from_to2/edu_from_to/quarkus.log
+#quarkus.log.console.enable=true
+#quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
