--- a/prof/src/main/resources/application.properties
+++ b/prof/src/main/resources/application.properties
@@ -6,7 +6,7 @@ quarkus.datasource.db-kind = postgresql
 quarkus.datasource.jdbc.url=jdbc:postgresql://192.168.0.108:5432/prof
 quarkus.datasource.username=postgres
 quarkus.datasource.password=0a2161bdfe690b902303e1ab4730fe28
-quarkus.hibernate-orm.database.generation=update
+quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 
 
