--- a/prof/pom.xml
+++ b/prof/pom.xml
@@ -75,6 +75,14 @@
       <artifactId>quarkus-resteasy-jackson</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-oidc</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-keycloak-authorization</artifactId>
+    </dependency>
 
   </dependencies>
   <build>
