--- a/prof/src/main/resources/application.properties
+++ b/prof/src/main/resources/application.properties
@@ -3,7 +3,7 @@ quarkus.http.cors=true
 #??? ???? ??????
 quarkus.datasource.db-kind = postgresql
 #quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/edu-from-to
-quarkus.datasource.jdbc.url=jdbc:postgresql://192.168.0.108:5432/prof
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/prof
 quarkus.datasource.username=postgres
 quarkus.datasource.password=0a2161bdfe690b902303e1ab4730fe28
 quarkus.hibernate-orm.database.generation=update
@@ -15,3 +15,9 @@ quarkus.log.file.enable=true
 #quarkus.log.file.path=/home/sseryakova/work/edu_from_to2/edu_from_to/quarkus.log
 #quarkus.log.console.enable=true
 #quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+
+quarkus.oidc.auth-server-url=http://localhost:8082/auth/realms/prof
+quarkus.oidc.client-id=app-auth
+quarkus.oidc.enabled=true
+quarkus.oidc.token.issuer=http://nginx-archive/auth/realms/prof
+%dev.quarkus.oidc.token.issuer=http://localhost:8082/auth/realms/prof
