--- a/prof/src/main/resources/application.properties
+++ b/prof/src/main/resources/application.properties
@@ -2,7 +2,7 @@ quarkus.http.cors=true
 
 #??? ???? ??????
 quarkus.datasource.db-kind = postgresql
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/prof
+quarkus.datasource.jdbc.url=jdbc:postgresql://192.168.0.108:5432/prof
 #quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/prof
 quarkus.datasource.username=postgres
 quarkus.datasource.password=0a2161bdfe690b902303e1ab4730fe28
@@ -16,8 +16,8 @@ quarkus.log.file.enable=true
 #quarkus.log.console.enable=true
 #quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
 
-quarkus.oidc.auth-server-url=http://localhost:8082/auth/realms/prof
+quarkus.oidc.auth-server-url=http://192.168.0.108:8082/auth/realms/prof
 quarkus.oidc.client-id=app-auth
 quarkus.oidc.enabled=true
 quarkus.oidc.token.issuer=http://nginx-archive/auth/realms/prof
-%dev.quarkus.oidc.token.issuer=http://localhost:8082/auth/realms/prof
+%dev.quarkus.oidc.token.issuer=http://192.168.0.108:8082/auth/realms/prof
