--- a/prof/src/main/resources/application.properties
+++ b/prof/src/main/resources/application.properties
@@ -19,5 +19,5 @@ quarkus.log.file.enable=true
 quarkus.oidc.auth-server-url=http://localhost:8082/auth/realms/prof
 quarkus.oidc.client-id=app-auth
 quarkus.oidc.enabled=true
-quarkus.oidc.token.issuer=http://nginx-archive/auth/realms/prof
+#quarkus.oidc.token.issuer=http://nginx-archive/auth/realms/prof
 %dev.quarkus.oidc.token.issuer=http://localhost:8082/auth/realms/prof
