--- a/prof/src/main/resources/application.properties
+++ b/prof/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+# TODO check all config-lines to remove extra-configs
+
 quarkus.http.cors=true
 
-#??? ???? ??????
+# Config DB and Hibernate
 quarkus.datasource.db-kind = postgresql
 #quarkus.datasource.jdbc.url=jdbc:postgresql://192.168.0.108:5432/prof
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/prof
@@ -9,16 +11,16 @@ quarkus.datasource.password=0a2161bdfe690b902303e1ab4730fe28
 quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=true
 
-
+#todo to config logging!!!!!
 quarkus.log.file.enable=true
-#todo ???????? ???? ??????????!!!!!
 #quarkus.log.file.path=/home/sseryakova/work/edu_from_to2/edu_from_to/quarkus.log
-#quarkus.log.console.enable=true
-#quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+quarkus.log.file.path=./quarkus.log
+quarkus.log.console.enable=true
+quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
 
+# Config OIDC (keycloak)
 #quarkus.oidc.auth-server-url=http://192.168.0.108:8082/auth/realms/prof
 quarkus.oidc.auth-server-url=http://localhost:8082/auth/realms/prof
 quarkus.oidc.client-id=app-auth
 quarkus.oidc.enabled=true
-#quarkus.oidc.token.issuer=http://nginx-archive/auth/realms/prof
-%dev.quarkus.oidc.token.issuer=http://localhost:8082/auth/realms/prof
+quarkus.oidc.token.issuer=http://localhost:8082/auth/realms/prof
