Removed extra files

--- a/prof/src/main/resources/application.properties
+++ b/prof/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-# TODO check all config-lines to remove extra-configs
-
 quarkus.http.cors=true
 
 # Config DB and Hibernate
@@ -11,9 +9,8 @@ quarkus.datasource.password=0a2161bdfe690b902303e1ab4730fe28
 quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=true
 
-#todo to config logging!!!!!
+# Config logging
 quarkus.log.file.enable=true
-#quarkus.log.file.path=/home/sseryakova/work/edu_from_to2/edu_from_to/quarkus.log
 quarkus.log.file.path=./quarkus.log
 quarkus.log.console.enable=true
 quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
