--- a/nginx/conf/app.conf
+++ b/nginx/conf/app.conf
@@ -3,6 +3,12 @@ upstream consul {
   zone upstream-consul 64k;
   server 127.0.0.1:8300 max_fails=3 fail_timeout=60 weight=1;
   
+}   
+upstream study-service {
+  zone upstream-study-service 64k;
+  server 192.168.0.199:8084 max_fails=3 fail_timeout=60 weight=1;
+  server 192.168.0.199:8080 max_fails=3 fail_timeout=60 weight=1;
+  
 } 
 
 server {
@@ -18,6 +24,13 @@ server {
     location /consul {
     	rewrite /consul/(.*)  /$1  break;
         proxy_pass http://consul;
+        proxy_redirect     off;
+        proxy_set_header   Host $host;
+    }
+    
+    location /study-service {
+    	rewrite /study-service/(.*)  /$1  break;
+        proxy_pass http://study-service;
         proxy_redirect     off;
         proxy_set_header   Host $host;
     }
